[package]
name = "oxagorn"
version = "0.1.2"
edition = "2021"
authors = ["Dean Laslett (original ARAGORN)", "Sunju Kim <n.e.coli.1822@gmail.com>"]
description = "Oxagorn - Rust reimplemented ARAGORN, tRNA and tmRNA detection, for bactars annotator"
license = "GPL-3.0"
repository = "https://github.com/necoli1822/oxagorn"
homepage = "https://github.com/necoli1822/oxagorn"

[lib]
name = "oxagorn"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oxagorn"
path = "src/main.rs"

[dependencies]
libc = "0.2"
rayon = "1.10"
needletail = "0.6"
num_cpus = "1.16"
# Python bindings disabled in the bactars-dev workspace (pyo3 links native
# `python`; only one such crate per workspace — rustygal also uses pyo3).
# pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
# python = ["pyo3"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false
strip = true

[profile.dev]
opt-level = 0

[lints.rust]
# The optional `python` (pyo3) feature is intentionally disabled in this build
# (bindings remain source-gated); declare the cfg so it is not flagged unexpected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("python"))'] }
